# find_package_gtest

./: CMakeLists.txt
include/: cgpa_calc.hpp
src/: CMakeLists.txt  cgpa_calc.cpp  main.cpp
test/: CMakeLists.txt  test_cgpa_calc.cpp  test_main.cpp
